--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <link rel="manifest" href="manifest.json">
   <title>نقشه من</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
   <!-- لینک به CSS کتابخانه Leaflet -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
     integrity="sha512-xodZBntMZJUncM7gHfIy3ekQ39nA45dckGd8cy8F32Y3OoP7JNprIsV6RKfN8r+XhmGD9I0Ijm6zZ2sL4D/w2g=="
