--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fa">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <link rel="manifest" href="manifest.json">
   <title>نقشه من</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
